force-app/main/default/objects/Sample_Images__c/Sample_Images__c.object-meta.xml
<CustomObject>
    <label>出样图片</label>
    <nameField>
        <displayFormat>SI{yyyy}{mm}{dd}{000000}</displayFormat>
        <label>出样图片编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>出样图片</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>