force-app/main/default/objects/Sample_Images__c/fields/ReRe__c.field-meta.xml
<CustomField>
    <fullName>ReRe__c</fullName>
    <label>图片说明</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>