force-app/main/default/objects/Sample_Images__c/fields/Sample_Images__c.field-meta.xml
<CustomField>
    <fullName>Sample_Images__c</fullName>
    <label>出样图片</label>
    <type>Url</type>
</CustomField>