force-app/main/default/objects/Sample_Images__c/fields/Sampling_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Inspection__c</fullName>
    <label>出样检查</label>
    <referenceTo>Sampling_Inspection__c</referenceTo>
    <relationshipLabel>出样图片</relationshipLabel>
    <relationshipName>Sample_Images</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>